fixed temperature not showing on webpage, proxy  links and other small mistakes in

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -114,7 +114,7 @@
 
                 <p>Access live Prometheus metrics for detailed monitoring of this Hive Monitoring Box.</p>
 
-                <a href="/metrics" class="btn btn-secondary" target="_blank">View Prometheus Metrics</a>
+                <a href="/prometheus/" class="btn btn-secondary" target="_blank">View Prometheus Metrics</a>
               
                 <br><a href="#about" class="btn btn-outline-primary mt-3">Back to Top</a>
               </div>
@@ -128,7 +128,7 @@
                 <h2 class="mb-5">📊 Grafana Dashboard</h2>
 
                 <p>Access Grafana to check the information gathered in this Hive Monitoring Box.</p>
-                <a href="/grafana" target="_blank" class="btn btn-secondary" target="_blank">Open Grafana</a>
+                <a href="/grafana/" class="btn btn-secondary" target="_blank">Open Grafana</a>
                 <br><br>
                 <p>Access directly to the Hive Monitoring Box Dashboard.</p>
                 <a href="/grafana/d/abc123/hive-dashboard" class="btn btn-secondary" target="_blank">Open Hive Dashboard</a>
