updated name from test sensebox and added grafana credentials to website for easier comprehension

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -128,7 +128,7 @@
                 <h2 class="mb-5">📊 Grafana Dashboard</h2>
 
                 <p>Access Grafana to check the information gathered in this Hive Monitoring Box.</p>
-                <a href="/grafana/" class="btn btn-secondary" target="_blank">Open Grafana</a>
+                <a href="/grafana/" class="btn btn-secondary" target="_blank">Open Grafana [Credentials are admin/admin]</a>
                 <br><br>
                 <p>Access directly to the Hive Monitoring Box Dashboard.</p>
                 <a href="/grafana/d/beehive-temp-monitoring/beehive-box-temperature-dashboard" class="btn btn-secondary" target="_blank">Open Hive Dashboard</a>
