--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -127,8 +127,9 @@
               <div class="resume-section-content">
                 <h2 class="mb-5">📊 Grafana Dashboard</h2>
 
-                <p>Access Grafana to check the information gathered in this Hive Monitoring Box.</p>
-                <a href="/grafana/" class="btn btn-secondary" target="_blank">Open Grafana [Credentials are admin/admin]</a>
+                <p>Access Grafana to check the information gathered in this Hive Monitoring Box.
+                  <br><em>[Credentials are admin/admin]</em></p>
+                <a href="/grafana/" class="btn btn-secondary" target="_blank">Open Grafana</a>
                 <br><br>
                 <p>Access directly to the Hive Monitoring Box Dashboard.</p>
                 <a href="/grafana/d/beehive-temp-monitoring/beehive-box-temperature-dashboard" class="btn btn-secondary" target="_blank">Open Hive Dashboard</a>
